--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "./.quasar/tsconfig.json"
+  "extends": "./.quasar/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["src/components/*"],
+      "helpers/*": ["src/helpers/*"]
+    }
+  },
+  "exclude": ["dist", ".quasar", "node_modules"]
 }
