--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-  "name": "admin-panels",
-  "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
-  "author": "p_bednyakov <pavel.bednyakov@rt.ru>",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{js,cjs,mjs,vue}\"",
-    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build",
-    "postinstall": "quasar prepare"
-  },
-  "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
-    "@quasar/extras": "^1.16.4",
-    "quasar": "^2.16.0",
-    "vue": "^3.4.18",
-    "vue-router": "^4.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "globals": "^15.12.0",
-    "vite-plugin-checker": "^0.8.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "prettier": "^3.3.3",
-    "@quasar/app-vite": "^2.0.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.14"
-  },
-  "engines": {
-    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
-  }
+    "name": "admin-panels",
+    "version": "0.0.1",
+    "description": "A Quasar Project",
+    "productName": "Quasar App",
+    "author": "p_bednyakov <pavel.bednyakov@rt.ru>",
+    "type": "module",
+    "private": true,
+    "scripts": {
+        "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+        "test": "echo \"No test specified\" && exit 0",
+        "dev": "quasar dev",
+        "build": "quasar build",
+        "postinstall": "quasar prepare",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+        "stylelint": "stylelint '**/*{.css, .scss, .vue}'",
+        "stylelint:fix": "stylelint '**/*{.css, .scss, .vue}' --fix"
+    },
+    "dependencies": {
+        "@quasar/extras": "^1.16.4",
+        "axios": "^1.2.1",
+        "pinia": "^2.0.11",
+        "quasar": "^2.16.0",
+        "vue": "^3.4.18",
+        "vue-router": "^4.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.14.0",
+        "@quasar/app-vite": "^2.0.0",
+        "@vue/eslint-config-prettier": "^10.1.0",
+        "autoprefixer": "^10.4.2",
+        "eslint": "^9.14.0",
+        "eslint-plugin-vue": "^9.30.0",
+        "globals": "^15.12.0",
+        "postcss": "^8.4.14",
+        "prettier": "^3.3.3",
+        "vite-plugin-checker": "^0.8.0",
+        "stylelint": "^16.14.1",
+        "stylelint-config-recommended-vue": "^1.6.0",
+        "stylelint-config-standard": "^37.0.0",
+        "stylelint-config-standard-scss": "^14.0.0",
+        "stylelint-order": "^6.0.4",
+        "stylelint-scss": "^6.11.0"
+    },
+    "engines": {
+        "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
+        "npm": ">= 6.13.4",
+        "yarn": ">= 1.21.1"
+    }
 }
