--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
         "dev": "quasar dev",
         "build": "quasar build",
         "postinstall": "quasar prepare",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs",
-        "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix" ,
         "stylelint": "stylelint \"src/**/*.{css,scss,vue,js}\"",
         "stylelint:fix": "stylelint \"src/**/*.{css,scss,vue,js}\" --fix"
     },
@@ -28,12 +26,8 @@
         "vue-router": "^4.5.0"
     },
     "devDependencies": {
-        "@eslint/js": "^9.22.0",
         "@quasar/app-vite": "^2.1.4",
-        "@vue/eslint-config-prettier": "^10.2.0",
         "autoprefixer": "^10.4.21",
-        "eslint": "^9.22.0",
-        "eslint-plugin-vue": "^9.33.0",
         "globals": "^16.0.0",
         "postcss": "^8.5.3",
         "prettier": "^3.5.3",
@@ -43,6 +37,7 @@
         "stylelint-config-standard-scss": "^14.0.0",
         "stylelint-order": "^6.0.4",
         "stylelint-scss": "^6.11.1",
+        "typescript": "~5.5.3",
         "vite-plugin-checker": "^0.9.1"
     },
     "engines": {
